<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/small_margin">

    <!-- City Name -->
    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/city_name"
        android:textSize="16sp"
        android:layout_marginEnd="@dimen/extra_small_margin"/>

    <!-- Status SwitchCompat -->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/status_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/switch_off"
        android:textOn="@string/switch_on"
        android:showText="true"/>
</LinearLayout>
